--- a/frontend/src/CssComponents/topheader.css
+++ b/frontend/src/CssComponents/topheader.css
@@ -29,21 +29,18 @@
   .right-nav-op {
     color: rgb(223, 220, 220);
     position: relative;
-    display: inline-block;
+    /* display: inline-block; */
   }
+ 
+ 
   
   .Login-options {
     margin-top: 10px;
     position: absolute;
     padding: 5px;
-    
     border-radius: 3px;
     color: #666666;
     font-size: 14px;
-    /* padding-left: 3px; */
-    /* text-align: center; */
-    /* border: gray; */
-  
     border: 1px solid rgb(222, 215, 215);
     top: 100%;
     left: 0;
@@ -63,8 +60,6 @@
   .Login-option {
     padding-left: 5px;
     border-radius: 2px;
-    /* font-size: 12px; */
-    /* padding-bottom: ; */
   }
   
   .right-nav-op:hover .Login-options {
@@ -76,4 +71,11 @@
     transition: 0.2s ease-in-out;
   background-color: #342c2c;
     color: white;
+  }
+
+  @media (width < 1768px) {
+    .right-nav-op {
+      display: hidden;
+      position: absolute;
+    }
   }
